fix block gap variable in flow

--- a/src/scss/utilities/flow.scss
+++ b/src/scss/utilities/flow.scss
@@ -1,6 +1,6 @@
 @use "../abstracts/props.scss";
 .flow {
 	& > * + * {
-		margin-top: props.preset("block-gap", null, 1rem);
+		margin-top: props.style("block-gap", null, 1rem);
 	}
 }
